tests/baselines/reference/privateNameEnumNoEmit.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameEnumNoEmit.ts(2,5): error TS18024: An enum member cannot be named with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNameEnumNoEmit.ts (1 errors) ====
    enum E {
        #x     // Error
        ~~
!!! error TS18024: An enum member cannot be named with a private identifier.
    }
    